<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ModifyProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Produk"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewApp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical" >

                <com.google.android.material.textview.MaterialTextView
                    style="@style/DialogText"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/product_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_name"
                    app:hintEnabled="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/product_name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/DialogText"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/price" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_price"
                    app:hintEnabled="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/product_price"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/DialogText"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/product_description" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_product_desc"
                    app:hintEnabled="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_product_desc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|start"
                        android:hint="@string/hint_product_desc"
                        android:overScrollMode="always"
                        android:scrollbars="vertical"
                        android:inputType="textMultiLine"
                        android:minHeight="150dp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/ButtonApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/ButtonApp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete_product" />

    </LinearLayout>
</ScrollView>